--- a/views/aboutme.html
+++ b/views/aboutme.html
@@ -1,3 +1,109 @@
-<div>
-<h1>About ME</h1>
-</div>
+
+<section class="code">
+    <div>
+        <table class="tcode">
+            <tr>
+                <td>
+                    <header>
+                        <h1>Welcome</h1>
+                    </header>
+                    <section class="name">
+                        <div>
+                            <h2>MANBIR SINGH JASPAL</h2>
+                            <h4>FRONT END DEVELOPMENT | BACK END DEVELOPMENT | ANDROID DEVELOPER </h4>
+                        </div>
+                    </section>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <section class="hobbies">
+                        <div>
+                            <h2 class="hheading">HOBBIES</h2>
+                            <ul>
+                                <li><a href="https://www.ultimate-guitar.com" target="_blank">Playing the guitar</a>
+                                </li>
+                                <li><a href="https://en.wikipedia.org/wiki/Beatboxing" target="_blank">Beatboxing</a>
+                                </li>
+                                <li><a href="https://en.wikipedia.org/wiki/Billiard
+        " target="_blank">Billiards</a></li>
+                                <li><a href="https://en.wikipedia.org/wiki/Basketball
+        " target="_blank">Basketball</a></li>
+                                <li><a href="https://en.wikipedia.org/wiki/Swimming
+        " target="_blank">Swimming</a></li>
+                                <li><a href="https://www.gamespot.com/pc/games/
+        " target="_blank">Video Games</a></li>
+                                <li><a href="www.rc-drones.com/
+        " target="_blank">Remote control drones</a></li>
+                                <li><a href="https://en.wikipedia.org/wiki/Virtual_reality
+        " target="_blank">Virtual Reality</a></li>
+                            </ul>
+                            <ul class="secondList">
+                                <li>FAVOURITE SONGS :</li>
+                                <li>Despacito</li>
+                                <li><span class="blue">Wild</span>Thoughts</li>
+                                <li>Badak Yellow</li>
+                                <li>Location</li>
+                                <li>Saved</li>
+                                <li>Thats What I <span class="blue">Like</span></li>
+                                <li>Shape Of You</li>
+                            </ul>
+                        </div>
+                    </section>
+
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <section class="education">
+                        <div>
+                            <h2 class="hheading1">JOBS &amp; EDUCATION</h2>
+                            <h3 class="jobs1">JOBS <span class="edu">EDUCATION</span></h3>
+                            <ol>
+                                <li>Bank Muscat
+                                </li>
+
+                            </ol>
+                            <ul class="education1">
+                                <li><span class="blue">Georgia State University, MS - CS</span></li>
+                                <li>Birla Institute of Technology, BE - CS</li>
+                            </ul>
+                        </div>
+                    </section>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <section class="quote">
+                        <div>
+                            <blockquote>
+                                "You're only given a little spark of madness. You mustn't lose it."
+                            </blockquote>
+
+                        </div>
+
+                    </section>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <section class="links">
+                        <div>
+                            <h2 class="hheading">Other Links</h2>
+                            <ul>
+                                <li><a href="https://github.com/ManbirJaspal" target="_blank">GitHub</a></li>
+                                <li><a href="http://www.cs.gsu.edu/" target="_blank"><span class="blue">Gsu CS Department</span></a>
+                                </li>
+                                <li><a href="https://www.youtube.com/" target="_blank">Youtube</a></li>
+                                <li><a href="www.creepypasta.com/" target="_blank">Short Stories</a></li>
+                                <li>
+                                    <a href="C:\Users\manbir\Desktop\Web programming/Resume_ManbirJaspal.pdf"
+                                       target="_blank">Resume</a></li>
+                            </ul>
+                        </div>
+                    </section>
+                </td>
+            </tr>
+        </table>
+    </div>
+</section>
