--- a/views/llama.html
+++ b/views/llama.html
@@ -1,8 +1,5 @@
 
-  <canvas id="canvas" width="600" height="600"></canvas>
-
-
-<div class="home">
-<h1>Llama</h1>
-</div>
-
+  <div>
+      <canvas id="canvasnew" width="600" height="600"></canvas>
+         
+      </div>
