--- a/css/game.css
+++ b/css/game.css
@@ -3,16 +3,15 @@
 GAME.CSS
 **********************
 */
-
-
-body {
-  padding:0;
-  margin:0;
-  background:#666;
-}
 canvas {
   display:block;
   margin:30px auto 0;
   border:1px dashed #ccc;
   background:#000;
+  margin-bottom: 10px;
+}
+
+.intro{
+    margin-top: 52px;
+    
 }
