--- a/views/aboutme.html
+++ b/views/aboutme.html
@@ -41,11 +41,11 @@
                             <ul class="secondList">
                                 <li>FAVOURITE SONGS :</li>
                                 <li>Despacito</li>
-                                <li><span class="blue">Wild</span>Thoughts</li>
+                                <li>Wild Thoughts</li>
                                 <li>Badak Yellow</li>
                                 <li>Location</li>
                                 <li>Saved</li>
-                                <li>Thats What I <span class="blue">Like</span></li>
+                                <li>Thats What I Like</li>
                                 <li>Shape Of You</li>
                             </ul>
                         </div>
