--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -29,7 +29,7 @@ h1,h2,h3,H4 {
     text-transform: uppercase;
 }
 
-h1{ 
+.h1aboutme{ 
     font-weight: 300;
     text-transform: uppercase;
     padding-top: 290px;
@@ -41,11 +41,23 @@ h1{
     color: #fff;
     font-size: 400%;
     word-spacing: 4px;
-    letter-spacing: 1px;
+    letter-spacing: 2px;
 }
 
-.h2aboutme{ 
-    font-size: 10px;
+.h1aboutme:after {
+    display:block;
+    height: 1px;
+    background-color: #e67e22;
+    content:" ";
+    width: 9%;
+    margin: 0 auto;
+    margin-top: 1%;
+    margin-left: 8%;
+    
+}
+
+section .h2aboutme{ 
+    font-size: 70px;
     word-spacing: 2px;
     text-align: center;
     margin-bottom: 30px;
@@ -135,24 +147,11 @@ a:active {
     font-size: 90px;
 }
 
-.jobs1{
-    padding-left: 25%;
-    font-size: 50px;
-}
 
 ol{padding-left: 25%;
 display: inline-block;
     *display: inline;
     zoom: 1
-}
-
-.edu{
-    margin-left: 25%;
-    margin-bottom: 30px;
-}
-
-.blue{
-    color: blue;
 }
 
 .links{background-color: #555;
