added background to game

--- a/views/llama.html
+++ b/views/llama.html
@@ -1,7 +1,7 @@
 <section class="intro">
 
 </section>
-  <div>
+  <div class = "canvasbackground">
       <canvas id="canvasnew" width="600" height="600"></canvas>
          
       </div>
