--- a/css/game.css
+++ b/css/game.css
@@ -7,11 +7,18 @@ canvas {
   display:block;
   margin:30px auto 0;
   border:1px dashed #ccc;
-  background:#000;
+  background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),url(backgroundimg.jpg);
   margin-bottom: 10px;
+    position: fixed;
+    
 }
 
 .intro{
     margin-top: 52px;
+    
+}
+
+.canvasbackground{
+    padding-left: 30%;
     
 }
