--- a/css/home.css
+++ b/css/home.css
@@ -1,8 +1,18 @@
 *{
     letter-spacing: 1px;
     word-spacing: 1px;
+   
 }
-header {
+
+html {
+    background: #fff;
+    font-family:'lato','Arial','sans-serif';
+    font-weight: 300;
+    font-size: 20px;
+    text-rendering: optimizeLegibility;
+    
+}
+.homeheader {
     background-image: url(llama.jpg);
     height: 100vh;
     background-size: cover;
