--- a/views/aboutme.html
+++ b/views/aboutme.html
@@ -1,42 +1,33 @@
 
 <section class="code">
     <div>
-        <table class="tcode">
-            <tr>
-                <td>
                     <header class="aboutme">
                         <h1 class="h1aboutme">Welcome</h1>
                     </header>
                     <section class="name">
                         <div>
                             <h2 class="h2aboutme">MANBIR SINGH JASPAL</h2>
-                            <h4>FRONT END DEVELOPMENT | BACK END DEVELOPMENT | ANDROID DEVELOPER </h4>
+                            <h4>FRONT END DEVELOPER | BACK END DEVELOPER | ANDROID DEVELOPER </h4>
                         </div>
-                    </section>
-                </td>
-            </tr>
-            <tr>
-                <td>
+               
+            
                     <section class="hobbies">
                         <div>
                             <h2 class="h2aboutme">HOBBIES</h2>
                             <ul>
-                                <li><a class = "linkaboutme"href="https://www.ultimate-guitar.com" target="_blank">Playing the guitar</a>
+                                <li>Playing the guitar
                                 </li>
-                                <li><a class = "linkaboutme"href="https://en.wikipedia.org/wiki/Beatboxing" target="_blank">Beatboxing</a>
+                                <li>Beatboxing
                                 </li>
-                                <li><a class = "linkaboutme"href="https://en.wikipedia.org/wiki/Billiard
-        " target="_blank">Billiards</a></li>
-                                <li><a class = "linkaboutme"href="https://en.wikipedia.org/wiki/Basketball
-        " target="_blank">Basketball</a></li>
-                                <li><a class = "linkaboutme"href="https://en.wikipedia.org/wiki/Swimming
-        " target="_blank">Swimming</a></li>
-                                <li><a class = "linkaboutme"href="https://www.gamespot.com/pc/games/
-        " target="_blank">Video Games</a></li>
-                                <li><a class = "linkaboutme"href="www.rc-drones.com/
-        " target="_blank">Remote control drones</a></li>
-                                <li><a class = "linkaboutme"href="https://en.wikipedia.org/wiki/Virtual_reality
-        " target="_blank">Virtual Reality</a></li>
+                                <li>
+        Billiards</li>
+                                <li>
+       Basketball</li>
+                                <li>
+        Swimming</li>
+                                <li>Video Games</li>
+                                <li>Remote control drones</li>
+                                <li>Virtual Reality</li>
                             </ul>
                             <ul class="secondList">
                                 <li>FAVOURITE SONGS :</li>
@@ -51,10 +42,7 @@
                         </div>
                     </section>
 
-                </td>
-            </tr>
-            <tr>
-                <td>
+               
                     <section class="quote">
                         <div>
                             <blockquote>
@@ -64,10 +52,7 @@
                         </div>
 
                     </section>
-                </td>
-            </tr>
-            <tr>
-                <td>
+               
                     <section class="links">
                         <div>
                             <h2 class="h2aboutme">Other Links</h2>
@@ -79,8 +64,7 @@
                             </ul>
                         </div>
                     </section>
-                </td>
-            </tr>
-        </table>
+        
+        </section>
     </div>
 </section>
