--- a/views/home.html
+++ b/views/home.html
@@ -1,3 +1,17 @@
 <header class = "homeheader">
 <h1 class="llama">THE MAJESTIC LLAMA</h1>
 </header>
+
+<section class="lamafacts">
+<h1 class="funllama">FUN LLAMA FACTS</h1>
+    
+    <ul class="funllamalist">
+                                <li>Llamas are members of the camelid, or camel, family</li>
+                                <li>Llama poop has almost no odor. Llama farmers refer to llama manure as "llama beans." It makes great, eco-friendly fertilizer. The Incas in Peru burned dried llama poop for fuel</li>
+                                <li> Llamas know their own limits. If you try to overload a llama with too much weight, the llama is likely to lie down or simply refuse to move</li>
+                                <li>A llama's stomach has three compartments. As you can see in this diagram, they are called the rumen, omasum and abomasum. A cow's stomach has four compartments</li>
+                                <li>Llamas don't bite. They spit when they're agitated, but that's mostly at each other</li>
+                               
+                            </ul>
+</section>
+
