--- a/views/aboutme.html
+++ b/views/aboutme.html
@@ -1,6 +1,6 @@
 
-<section class="code">
-    <div>
+<section class="container-fluid code">
+    <div class = "container-fluid">
                     <header class="aboutme">
                         <h1 class="h1aboutme">Welcome</h1>
                     </header>
