--- a/views/home.html
+++ b/views/home.html
@@ -1,8 +1,8 @@
-<header class = "homeheader">
-<h1 class="llama">THE MAJESTIC LLAMA</h1>
+<header class = " container-fluid homeheader">
+<h1 class="display-1 llama">THE MAJESTIC LLAMA</h1>
 </header>
 
-<section class="lamafacts">
+<section class="container-fluid lamafacts">
 <h1 class="funllama">FUN LLAMA FACTS</h1>
     
     <ul class="funllamalist">
