--- a/views/llama.html
+++ b/views/llama.html
@@ -7,8 +7,8 @@
     <h2 class="heading2 rage">rage mode on!!!</h2>
     
     
-</section>
-  <div class = "canvasbackground">
+</section >
+  <div class = "container-fluid canvasbackground">
       <canvas id="canvasnew" width="600" height="600"></canvas>
          
       </div>
