--- a/views/llama.html
+++ b/views/llama.html
@@ -1,13 +1,4 @@
-<div class="background"><section class="intro">
-<h2 class = "heading2">ROBOTS ARE TAKING OVER THE EARTH</h2>
-    <h2 class="heading2">They are on their way to downtown Las Vegas </h2>
-    <h2 class="heading2">Tony is working on a way to completely disable the robot army </h2>
-    <h2 class="heading2">If tony dies the world will come to an end </h2>
-    <h2 class="heading2">the majestic llama is furious and is the only one who can help tony save the world</h2>
-    <h2 class="heading2 rage">rage mode on!!!</h2>
-    
-    
-</section >
+<div class="background">
   <div class = "container-fluid canvasbackground">
       <canvas id="canvasnew" width="600" height="600"></canvas>
          
