--- a/views/aboutme.html
+++ b/views/aboutme.html
@@ -5,15 +5,37 @@
                         <h1 class="h1aboutme">Welcome</h1>
                     </header>
                     <section class="name">
-                        <div>
-                            <h2 class="h2aboutme">MANBIR SINGH JASPAL</h2>
-                            <h4>FRONT END DEVELOPER | BACK END DEVELOPER | ANDROID DEVELOPER </h4>
+                        <div class="writtenblack">
+                            <h2>MANBIR SINGH JASPAL</h2>
+                            <h4>FRONT END DEVELOPER</h4>
+                            <div>
+                            <p>HTML, CSS and javascript were some of the first web technologies I learnt when I was in high school. I always found javascript interesting. Back then, I had built a simple TIC-TAC-TOE game.</p>
+                            
+                            <p>It's very exciting to see how websites have transformed. It's amazing that with the advent of Single Page Apps, we don't need to request for pages from the server anymore. All the code can live on the client and we can display data using JSON that comes back from the server.</p>
+                            
+                            <p> I like how websites are being implemented the mobile-first approach. The same website can be loaded on any device whether it be a desktop computer, a mobile phone or a tablet.</p>
+                            
+                            <p> I would love to see how big companies like Zappos implement such technologies. What kind of challenges do they face and how do they get around them? I've also never worked with caching mechanisms. I would like to learn more about browser caching. I'm extremely stoked to pursue my career as a front end developer.</p>
+                                </div>
                         </div>
+                        
+                        <section class="techused">
+                            
+                            <h2>How did i make this awesome website you ask ?</h2>
+                            <div class="tech">
+                            <p> I've used AngularJS to implement the Majestic Llama challenge. I used AngularJS because it was really easy to pick up and setup. </p>
+                            <p>The page routing is defined in config.js using the Angular's routing implementation. All the pages get loaded into the container div defined inside index.html</p>
+                            <p> I've tried to implement the MVC architecture. It might not be exactly correct, since I spent too much time building the game. But I've separated views and their associated controllers. I have a lot more to learn about MVC.</p>
+                            <p> I've taken help from online resources to build the game. I had never used a canvas before. So it was a bit of a learning curve to learn how to work with a canvas and how to move objects around.</p>
+                            <p>I made use of bootstrap to implement the nav bar and make it responsive. I've also used bootstrap classes for other DOM elements to make sure they are responsive.</p>
+                                <p>I've hosted the website on an AWS S3 bucket.</p>
+                            </div>
+                        </section>
                
             
                     <section class="hobbies">
                         <div>
-                            <h2 class="h2aboutme">HOBBIES</h2>
+                            <h2 class="writtenblack">HOBBIES</h2>
                             <ul>
                                 <li>Playing the guitar
                                 </li>
