--- a/views/aboutme.html
+++ b/views/aboutme.html
@@ -9,6 +9,9 @@
                             <h2>MANBIR SINGH JASPAL</h2>
                             <h4>FRONT END DEVELOPER</h4>
                             <div>
+                            <p>Currently a Computer Science graduate student at Georgia State University. </p>
+                                <p>Ive recently been hired for research on Virtual Reality, Augmented Reality and Aerial Drones.</p>
+                                <p>I am musician as well. I play the guitar, beatbox and sing. Music is a big part of my life.</p>
                             <p>HTML, CSS and javascript were some of the first web technologies I learnt when I was in high school. I always found javascript interesting. Back then, I had built a simple TIC-TAC-TOE game.</p>
                             
                             <p>It's very exciting to see how websites have transformed. It's amazing that with the advent of Single Page Apps, we don't need to request for pages from the server anymore. All the code can live on the client and we can display data using JSON that comes back from the server.</p>
@@ -37,30 +40,25 @@
                         <div>
                             <h2 class="writtenblack">HOBBIES</h2>
                             <ul>
+                                <li>Building Remote Control Drones
+                                </li>
+                                <li>Virtual Reality
+                                </li>
                                 <li>Playing the guitar
                                 </li>
                                 <li>Beatboxing
                                 </li>
-                                <li>
-        Billiards</li>
-                                <li>
-       Basketball</li>
-                                <li>
-        Swimming</li>
-                                <li>Video Games</li>
-                                <li>Remote control drones</li>
-                                <li>Virtual Reality</li>
+                                <li>Billiards
+                                </li>
+                                <li>PingPong
+                                </li>
+                                <li>Swimming
+                                </li>
+                                <li>Video Games
+                                </li>
+                                
                             </ul>
-                            <ul class="secondList">
-                                <li>FAVOURITE SONGS :</li>
-                                <li>Despacito</li>
-                                <li>Wild Thoughts</li>
-                                <li>Badak Yellow</li>
-                                <li>Location</li>
-                                <li>Saved</li>
-                                <li>Thats What I Like</li>
-                                <li>Shape Of You</li>
-                            </ul>
+                         
                         </div>
                     </section>
 
