--- a/views/aboutme.html
+++ b/views/aboutme.html
@@ -24,7 +24,7 @@
                         
                         <section class="techused">
                             
-                            <h2>How did i make this create website you ask ?</h2>
+                            <h2>How did i create this website you ask ?</h2>
                             <div class="tech">
                             <p> I've used AngularJS to implement the Majestic Llama challenge. I used AngularJS because it was really easy to pick up and setup. </p>
                             <p>The page routing is defined in config.js using the Angular's routing implementation. All the pages get loaded into the container div defined inside index.html</p>
