--- a/views/home.html
+++ b/views/home.html
@@ -1,17 +1,18 @@
-<header class = " container-fluid homeheader">
-<h1 class="display-1 llama">THE MAJESTIC LLAMA</h1>
+<header class = "homeheader">
+<h1 class="llama">THE MAJESTIC LLAMA</h1>
 </header>
 
-<section class="container-fluid lamafacts">
+<section class="lamafacts">
 <h1 class="funllama">FUN LLAMA FACTS</h1>
     
     <ul class="funllamalist">
                                 <li>Llamas are members of the camel family.</li>
-                                <li>Llamas poop is almost odourless.It is burnt for fuel</li>
-                                <li>Llamas know their own limits.Just try and overload them and they will either spit on you or just sit in a spot and chill</li>
-                                <li>A llama's stomach has three compartments. Isnt that crazy!</li>
-                                <li>Llamas don't bite.They spit when not feeling comfortable regarding something.Its green in color</li>
+                                <li>Llamas poop is almost odourless. It is burnt for fuel.</li>
+                                <li>Llamas know their own limits. Just try and overload them and they will either spit on you or just sit in a spot and chill.</li>
+                                <li>A llama's stomach has three compartments. Isn't that crazy!</li>
+                                <li>Llamas don't bite. They spit when not feeling comfortable regarding something. Its green in color.</li>
                                
                             </ul>
 </section>
+
 
