--- a/views/aboutme.html
+++ b/views/aboutme.html
@@ -9,10 +9,10 @@
                             <h2>MANBIR SINGH JASPAL</h2>
                             <h4>FRONT END DEVELOPER</h4>
                             <div>
-                            <p>Currently a Computer Science graduate student at Georgia State University. </p>
-                                <p>Ive recently been hired for research on Virtual Reality, Augmented Reality and Aerial Drones.</p>
-                                <p>I am musician as well. I play the guitar, beatbox and sing. Music is a big part of my life.</p>
-                            <p>HTML, CSS and javascript were some of the first web technologies I learnt when I was in high school. I always found javascript interesting. Back then, I had built a simple TIC-TAC-TOE game.</p>
+                            <p>I am currently a Computer Science graduate student at Georgia State University, </p>
+                                researching on Virtual Reality, Augmented Reality and Aerial Drones under Dr. Zhisheng Yan.
+                                <p>I play the guitar, beatbox and sing. Music is a big part of my life.</p>
+                            <p>HTML, CSS and JavaScript were some of the first web technologies I learnt when I was in high school. I always found JavaScript interesting. Back then, I had built a simple TIC-TAC-TOE game.</p>
                             
                             <p>It's very exciting to see how websites have transformed. It's amazing that with the advent of Single Page Apps, we don't need to request for pages from the server anymore. All the code can live on the client and we can display data using JSON that comes back from the server.</p>
                             
@@ -24,12 +24,12 @@
                         
                         <section class="techused">
                             
-                            <h2>How did i create this website you ask ?</h2>
+                            <h2>How did I create this website?</h2>
                             <div class="tech">
-                            <p> I've used AngularJS to implement the Majestic Llama challenge. I used AngularJS because it was really easy to pick up and setup. </p>
+                            <p> I've used AngularJS to implement the Majestic Llama challenge. I used AngularJS because it was really easy to setup and setup. </p>
                             <p>The page routing is defined in config.js using the Angular's routing implementation. All the pages get loaded into the container div defined inside index.html</p>
-                            <p> I've tried to implement the MVC architecture. It might not be exactly correct, since I spent too much time building the game. But I've separated views and their associated controllers. I have a lot more to learn about MVC.</p>
-                            <p> I've taken help from online resources to build the game. I had never used a canvas before. So it was a bit of a learning curve to learn how to work with a canvas and how to move objects around.</p>
+                            <p> I've implemented the MVC architecture. I've separated views and their associated controllers.</p>
+                            <p> I've taken help from online resources to build the game. I had never used a canvas before. So it was a bit of a learning curve towards understanding how a canvas works.</p>
                             <p>I made use of bootstrap to implement the nav bar and make it responsive. I've also used bootstrap classes for other DOM elements to make sure they are responsive.</p>
                                 <p>I've hosted the website on an AWS S3 bucket.</p>
                             </div>
@@ -66,7 +66,7 @@
                     <section class="quote">
                         <div>
                             <blockquote>
-                                "You're only given a little spark of madness. You mustn't lose it."
+                                "You're only given a little spark of madness. You musn't lose it."
                             </blockquote>
 
                         </div>
