--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -13,7 +13,7 @@ html {
 }
 
 .aboutme{
-    background-image:  linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),url(myimg.jpg);
+    background-image:  linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../assets/myimg.jpg);
     height: 100vh;
     background-size: cover;
     background-position: center;
