--- a/views/game.html
+++ b/views/game.html
@@ -1,6 +1,6 @@
 <div class="background">
-  <div class = "container-fluid canvasbackground">
-      <canvas id="canvasnew" width="600" height="600"></canvas>
-         
-      </div>
+    <div class = "container-fluid canvasbackground">
+        <canvas id="canvasnew" width="600" height="600">
+        </canvas>
+    </div>
 </div>
